# TransparNC

./: .dockerignore  AGENTS.md  CONTAINER_TESTING_IMPLEMENTATION_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.signaling  ICE_IMPLEMENTATION_GAPS.md  IMPLEMENTATION_PLAN.md  docker-compose.ice-test.yml  docker-compose.nat-test.yml  docker-compose.test.yml  docker-compose.yml  run_all_tests.sh
.github/workflows/: build.yml  ci.yml
src/: lib.rs  main.rs
src/common/: ipc.rs  messages.rs  mod.rs  types.rs
src/core/: mod.rs  state.rs
src/daemon/: mod.rs
src/gui/: app.rs  mod.rs
src/net/: ice.rs  mod.rs  nat.rs  peer.rs  tun.rs  wireguard.rs
tests/container/: run_ice_tests.sh  run_nat_test.sh  run_test.sh
tests/container/ice/: test_ice_candidate_exchange_signaling.sh  test_ice_cross_subnet_fallback.sh  test_ice_full_wireguard_pipeline.sh  test_ice_hole_punch_nat.sh  test_ice_packet_loss_retry.sh  test_ice_stun_behind_nat.sh
