[package]
name = "transpar_nc"
version = "0.1.0"
edition = "2024"

[dependencies]
boringtun = "0.7"
tokio = { version = "1.50", features = ["full"] }
tokio-tun = "0.12"
tun = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
iced = "0.14.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
redis = { version = "0.29", features = ["tokio-comp", "json"] }
futures-util = "0.3"
uuid = { version = "1.15", features = ["v4", "serde"] }
stun = "0.7"
async-trait = "0.1"
if-addrs = "0.13"
